--- a/index.html
+++ b/index.html
@@ -380,7 +380,77 @@
                     <use href='./images/icons.svg#icon-close-black-18'></use>
                 </svg>
             </button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class='modal-form'>
+                <div class='modal-field'>
+                    <label for='user-name' class='modal-label'>Name</label>
+                    <div class='modal-input-wrap'>
+                        <input type="text" class='modal-input' name='user-name' id='user-name'>
+                        <svg class='modal-icons' width='18' height='18'>
+                            <use href='./images/icons.svg#icon-person-black'></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class='modal-field'>
+                    <label for="user-phone" class='modal-label'>Phone</label>
+                    <div class='modal-input-wrap'>
+                        <input type="text" class='modal-input' name='user-phone' id='user-phone'>
+                        <svg class='modal-icons' width='18' height='24'>
+                            <use href='./images/icons.svg#icon-phone-black-18dp-1'></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class='modal-field'>
+                    <label for="user-email" class='modal-label'>Email</label>
+                    <div class='modal-input-wrap'>
+                        <input type="email" class='modal-input' name='user-email' id='user-email'>
+                        <svg class='modal-icons' width='18' height='24'>
+                            <use href='./images/icons.svg#icon-email-black-18dp-1'></use>
+                        </svg>
+                    </div>
+                </div>
+                <div>
+                    <label for="user-text" class='modal-label'>Comment</label>
+                    <textarea name="user-text" id="user-text" class='modal-comment' placeholder='Text input'></textarea>
+                </div>
+                <div class='modal-field'>
+                    <!-- <svg class='modal-icons' width='16' height='16'>
+                        <use href='./images/icons.svg#icon-Checkbox-1'></use>
+                    </svg> -->
+                    <input type="checkbox" id='policy' name='policy' value='true' class='modal-check'>
+                    <label for="policy" class='modal-check-text'>
+                        <span>
+                            <svg class='modal-icons' width='16' height='16'>
+                                <use href='./images/icons.svg#icon-Checkbox-1'></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the <a href="" class='modal-check-link'>Privacy
+                            Policy</a></label>
+                </div>
+                <!-- <div>
+                    <label for="user-city" class='modal-label'>City</label>
+                    <select name="user-city" id="user-sity" class='modal-input' multiple>
+                        <option value="london">London</option>
+                        <option value="paris">Paris</option>
+                        <option value="poznan">Poznan</option>
+                    </select>
+                </div> -->
+                <!-- <div class='modal-field'>
+                    <label for="White">White</label>
+                    <input type="radio" id='White' name='color-type' value='White'>
+                    <label for="Black">Black</label>
+                    <input type="radio" id='Black' name="color-type" value='Black'>
+                </div>
+                <div class='modal-field'>
+                    <label for="White">White</label>
+                    <input type="checkbox" id='White' name='color-type' value='White'>
+                    <label for="Black">Black</label>
+                    <input type="checkbox" id='Black' name="color-type" value='Black'>
+                </div> -->
+                <button type='submit' class='modal-form-button'>Send</button>
+            </form>
         </div>
+    </div>
     </div>
     <script src="./js/modal.js"></script>
 </body>
