--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         </div>
     </footer>
     <!-- -------------------------------------modal----------------------- -->
-    <div class='backdrop' data-modal>
+    <div class='backdrop is-hidden' data-modal>
         <div class='modal'>
             <button type='button' data-modal-close class='modal-button'>
                 <svg class='modal-button-icons' width='8' height='8'>
