--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     <label for='user-name' class='modal-label'>Name</label>
                     <div class='modal-input-wrap'>
                         <input type="text" class='modal-input' name='user-name' id='user-name'>
-                        <svg class='modal-icons' width='18' height='18'>
+                        <svg class='modal-icons' width='18' height='24'>
                             <use href='./images/icons.svg#icon-person-black'></use>
                         </svg>
                     </div>
@@ -409,18 +409,19 @@
                         </svg>
                     </div>
                 </div>
-                <div>
-                    <label for="user-text" class='modal-label'>Comment</label>
-                    <textarea name="user-text" id="user-text" class='modal-comment' placeholder='Text input'></textarea>
+                <div class='modal-text-comment'>
+                    <label for="user-comment" class='modal-label'>Comment</label>
+                    <textarea name="user-comment" id="user-comment" class='modal-comment'
+                        placeholder='Text input'></textarea>
                 </div>
-                <div class='modal-field'>
+                <div class='modal-check-field'>
                     <!-- <svg class='modal-icons' width='16' height='16'>
                         <use href='./images/icons.svg#icon-Checkbox-1'></use>
                     </svg> -->
-                    <input type="checkbox" id='policy' name='policy' value='true' class='modal-check'>
-                    <label for="policy" class='modal-check-text'>
-                        <span>
-                            <svg class='modal-icons' width='16' height='16'>
+                    <input type="checkbox" id='user-privacy' name='user-privacy' value='true' class='visually-hidden'>
+                    <label for="user-privacy" class='modal-check-text'>
+                        <span modal-checkbox>
+                            <svg class='modal-icons' width='10' height='8'>
                                 <use href='./images/icons.svg#icon-Checkbox-1'></use>
                             </svg>
                         </span>
