--- a/portfolio.html
+++ b/portfolio.html
@@ -289,6 +289,22 @@
                     </li>
                 </ul>
             </div>
+            <div class='footer-bottom'>
+                <p class='footer-subscribe'>Subscribe</p>
+                <form class='footer-form'>
+                    <label aria-label='footer email input'>
+                        <input type="email" name='footer-mail' class='footer-input' placeholder='E-mail'>
+                        <button type='submit' class='footer-button'>Subscribe
+                            <span>
+                                <svg class='button-icons' width='24' height='24'>
+                                    <use href='./images/icons.svg#icon-Frame-white'></use>
+                                </svg>
+                            </span>
+                        </button>
+                    </label>
+                </form>
+            </div>
+
         </div>
     </footer>
 
