--- a/index.html
+++ b/index.html
@@ -373,14 +373,14 @@
             <div class='footer-bottom'>
                 <p class='footer-subscribe'>Subscribe</p>
                 <form class='footer-form'>
-                    <label aria-label='footer email input'>
+                    <label aria-label='footer email input' class='footer-label'>
                         <input type="email" name='footer-mail' class='footer-input' placeholder='E-mail'>
                         <button type='submit' class='footer-button'>Subscribe
-                            <span>
-                                <svg class='button-icons' width='24' height='24'>
-                                    <use href='./images/icons.svg#icon-Frame-white'></use>
-                                </svg>
-                            </span>
+
+                            <svg class='footer-button-icons' width='24' height='24'>
+                                <use href='./images/icons.svg#icon-Frame-white'></use>
+                            </svg>
+
                         </button>
                     </label>
                 </form>
