--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@
         </div>
     </footer>
 
-
-    <!-- -------------------------------------modal----------------------- -->
-    <!-- <div class='backdrop is-hidden' data-modal>
+    <!-- 
+    -------------------------------------modal----------------------- -->
+    <div class='backdrop is-hidden' data-modal>
         <div class='modal'>
             <button type='button' data-modal-close class='modal-button'>
                 <svg class='modal-button-icons' width='8' height='8'>
@@ -433,7 +433,7 @@
                     - <svg class='modal-icons' width='16' height='16'>
                         <use href='./images/icons.svg#icon-Checkbox-1'></use>
                     </svg> -->
-    <!-- <input type="checkbox" id='user-privacy' name='user-privacy' value='true' class='visually-hidden'>
+                    <input type="checkbox" id='user-privacy' name='user-privacy' value='true' class='visually-hidden'>
                     <label for="user-privacy" class='modal-check-text'>
                         <span modal-checkbox>
                             <svg class='modal-icons' width='10' height='8'>
@@ -442,16 +442,16 @@
                         </span>
                         I accept the terms and conditions of the <a href="" class='modal-check-link'>Privacy
                             Policy</a></label>
-                </div> -->
-    <!-- <div>
+                </div>
+                <div>
                     <label for="user-city" class='modal-label'>City</label>
                     <select name="user-city" id="user-sity" class='modal-input' multiple>
                         <option value="london">London</option>
                         <option value="paris">Paris</option>
                         <option value="poznan">Poznan</option>
                     </select>
-                </div> -->
-    <!-- <div class='modal-field'>
+                </div>
+                <div class='modal-field'>
                     <label for="White">White</label>
                     <input type="radio" id='White' name='color-type' value='White'>
                     <label for="Black">Black</label>
@@ -462,12 +462,12 @@
                     <input type="checkbox" id='White' name='color-type' value='White'>
                     <label for="Black">Black</label>
                     <input type="checkbox" id='Black' name="color-type" value='Black'>
-                </div> -->
-    <!-- <button type='submit' class='modal-form-button'>Send</button>
+                </div>
+                <button type='submit' class='modal-form-button'>Send</button>
             </form>
         </div>
     </div>
-    </div> -->
+    </div>
     <script src="./js/modal.js"></script>
 </body>
 
