--- a/index.html
+++ b/index.html
@@ -430,20 +430,23 @@
                         placeholder='Text input'></textarea>
                 </div>
                 <div class='modal-check-field'>
-                    - <svg class='modal-icons' width='16' height='16'>
-                        <use href='./images/icons.svg#icon-Checkbox-1'></use>
-                    </svg> -->
-                    <input type="checkbox" id='user-privacy' name='user-privacy' value='true' class='visually-hidden'>
+                    <input type="checkbox" class='modal-input' id='user-privacy' name='user-privacy' value='true'
+                        class='visually-hidden'>
                     <label for="user-privacy" class='modal-check-text'>
-                        <span modal-checkbox>
+                        <span class='modal-checkbox'>
                             <svg class='modal-icons' width='10' height='8'>
                                 <use href='./images/icons.svg#icon-Checkbox-1'></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the <a href="" class='modal-check-link'>Privacy
-                            Policy</a></label>
+                            Policy</a>
+                    </label>
+                    </label>
+                    <svg class='modal-icons' width='16' height='16'>
+                        <use href='./images/icons.svg#icon-Checkbox-1'></use>
+                    </svg>
                 </div>
-                <div>
+                <!-- <div>
                     <label for="user-city" class='modal-label'>City</label>
                     <select name="user-city" id="user-sity" class='modal-input' multiple>
                         <option value="london">London</option>
@@ -462,7 +465,7 @@
                     <input type="checkbox" id='White' name='color-type' value='White'>
                     <label for="Black">Black</label>
                     <input type="checkbox" id='Black' name="color-type" value='Black'>
-                </div>
+                </div> -->
                 <button type='submit' class='modal-form-button'>Send</button>
             </form>
         </div>
