--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                         placeholder='Text input'></textarea>
                 </div>
                 <div class='modal-check-field'>
-                    <input type="checkbox" class='modal-input' id='user-privacy' name='user-privacy' value='true'
-                        class='visually-hidden'>
+                    <input type="checkbox" class='modal-input visually-hidden' id='user-privacy' name='user-privacy'
+                        value='true'>
                     <label for="user-privacy" class='modal-check-text'>
                         <span class='modal-checkbox'>
                             <svg class='modal-icons' width='10' height='8'>
@@ -440,7 +440,6 @@
                         </span>
                         I accept the terms and conditions of the <a href="" class='modal-check-link'>Privacy
                             Policy</a>
-                    </label>
                     </label>
                     <svg class='modal-icons' width='16' height='16'>
                         <use href='./images/icons.svg#icon-Checkbox-1'></use>
@@ -469,7 +468,6 @@
                 <button type='submit' class='modal-form-button'>Send</button>
             </form>
         </div>
-    </div>
     </div>
     <script src="./js/modal.js"></script>
 </body>
