--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                     <div class='modal-input-wrap'>
                         <input type="text" class='modal-input' name='user-phone' id='user-phone'>
                         <svg class='modal-icons' width='18' height='24'>
-                            <use href='./images/icons.svg#icon-phone-black-18dp-1'></use>
+                            <use href='./images/icons.svg#icon-phone-black'></use>
                         </svg>
                     </div>
                 </div>
@@ -420,7 +420,7 @@
                     <div class='modal-input-wrap'>
                         <input type="email" class='modal-input' name='user-email' id='user-email'>
                         <svg class='modal-icons' width='18' height='24'>
-                            <use href='./images/icons.svg#icon-email-black-18dp-1'></use>
+                            <use href='./images/icons.svg#icon-email-black'></use>
                         </svg>
                     </div>
                 </div>
