--- a/index.html
+++ b/index.html
@@ -435,15 +435,15 @@
                     <label for="user-privacy" class='modal-check-text'>
                         <span class='modal-checkbox'>
                             <svg class='modal-icons' width='10' height='8'>
-                                <use href='./images/icons.svg#icon-Checkbox-1'></use>
+                                <use href='./images/icons.svg#icon-check'></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the <a href="" class='modal-check-link'>Privacy
                             Policy</a>
                     </label>
-                    <svg class='modal-icons' width='16' height='16'>
-                        <use href='./images/icons.svg#icon-Checkbox-1'></use>
-                    </svg>
+                    <!-- <svg class='modal-icons' width='16' height='16'>
+                        <use href='./images/icons.svg#icon-Checkbox'></use>
+                    </svg> -->
                 </div>
                 <!-- <div>
                     <label for="user-city" class='modal-label'>City</label>
