--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                     <label for="user-privacy" class='modal-check-text'>
                         <span class='modal-checkbox'>
                             <svg class='modal-icons' width='10' height='8'>
-                                <use href='./images/icons.svg#icon-check'></use>
+                                <use href='./images/icons.svg#icon-Checkbox'></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the <a href="" class='modal-check-link'>Privacy
