--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
                         value='true'>
                     <label for="user-privacy" class='modal-check-text'>
                         <span class='modal-checkbox'>
-                            <svg class='modal-icons' width='10' height='8'>
-                                <use href='./images/icons.svg#icon-Checkbox'></use>
+                            <svg class='modal-icons-check' width='10' height='8'>
+                                <use href='./images/icons.svg#icon-check'></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the <a href="" class='modal-check-link'>Privacy
